--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
     <div class="page-header__wrapper">
       <nav class="page-header__nav page-nav">
         <a class="page-nav__logo logo">
-          <img src="img/logo.svg" alt="логотип Keksby">
+          <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
         </a>
         <ul class="site-nav">
           <li class="site-nav__item">
@@ -33,12 +33,14 @@
         <a href="#" class="page-nav__order-button button">Заказать</a>
       </nav>
     </div>
+    <section class="page-header__hero">
+      <h1 class="page-header__title">
+        Аксессуары для котов <br>
+        Коллекция FW15
+      </h1>
+    </section>
   </header>
   <main>
-    <h1 class="page-title">
-      Аксессуары для котов <br>
-      Коллекция FW15
-    </h1>
     <section class="features">
       <div class="features__wrapper">
         <h2 class="visually-hidden">Наши преимущества</h2>
@@ -72,7 +74,7 @@
               Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и
               количеству, что и вызывает различия в окрасе.</p>
             <p class="theory__image">
-              <img src="img/cat-color.jpg" alt="Окрас кошек и котов" width="100" height="100">
+              <img src="img/cat-color.png" alt="Окрас кошек и котов" width="100" height="100">
             </p>
           </li>
           <li class="theory__item">
@@ -83,7 +85,7 @@
               когтеточкой,
               с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
             <p class="theory__image">
-              <img src="img/cat-house.jpg" alt="Кошкин дом" width="100" height="100">
+              <img src="img/cat-house.png" alt="Кошкин дом" width="100" height="100">
             </p>
           </li>
         </ul>
@@ -206,7 +208,7 @@
           <p>Свяжитесь с нами и мы развеем оставшиеся у вас сомнения!</p>
         </div>
         <p class="write-us__image">
-          <img src="img/write-us.jpg" alt="Пишите письма" width="340" height="535">
+          <img src="img/write-us.png" alt="Пишите письма" width="340" height="535">
         </p>
         <form class="write-us__form write-us-form" action="#" method="post">
           <p class="write-us-form__name">
@@ -238,7 +240,7 @@
     <div class="page-footer__wrapper">
       <div class="page-footer__section">
         <a class="page-footer__logo logo">
-          <img src="img/logo.svg" alt="логотип Keksby">
+          <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
         </a>
         <a href="#" class="page-footer__order-button button">Заказать</a>
       </div>
