--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
         <a class="page-nav__logo logo">
           <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
         </a>
-        <ul class="site-nav">
+        <ul class="page-nav__site-nav site-nav">
           <li class="site-nav__item">
             <a href="#" class="site-nav__link">Магазин</a>
           </li>
@@ -46,15 +46,15 @@
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="features__list">
           <li class="features__item features__item--choice">
-            <h2 class="features__title">Выбор</h2>
+            <h3 class="features__title">Выбор</h3>
             <p class="features__desc">Ваш питомец оценит широту нашего ассортимента аксессуаров</p>
           </li>
           <li class="features__item features__item--quality">
-            <h2 class="features__title">Качество</h2>
+            <h3 class="features__title">Качество</h3>
             <p class="features__desc">Наши товары не сломаются на второй день. Только третий.</p>
           </li>
           <li class="features__item features__item--safety">
-            <h2 class="features__title">Безопасность</h2>
+            <h3 class="features__title">Безопасность</h3>
             <p class="features__desc">Все изготовлено из натуральных материалов, безопасных для котов.</p>
           </li>
         </ul>
@@ -68,25 +68,35 @@
         </div>
         <ul class="theory__list">
           <li class="theory__item">
-            <h3 class="theory__item-title">Окрас кошек и котов</h3>
-            <p class="theory__source">источник wikipedia</p>
-            <p class="theory__text">Окрас шерсти, коже и глаз кошки обусловлен присутствием в них пигмента меланина.
-              Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и
-              количеству, что и вызывает различия в окрасе.</p>
-            <p class="theory__image">
-              <img src="img/cat-color.png" alt="Окрас кошек и котов" width="100" height="100">
-            </p>
+            <div class="theory__item-head">
+              <h3 class="theory__item-title">Окрас кошек и котов</h3>
+              <p class="theory__source">источник wikipedia</p>
+            </div>
+            <div class="theory__item-content">
+              <p class="theory__image">
+                <img src="img/cat-color.png" alt="Окрас кошек и котов" width="100" height="100">
+              </p>
+              <p class="theory__text">Окрас шерсти, коже и глаз кошки обусловлен присутствием в них пигмента меланина.
+                Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и
+                количеству, что и вызывает различия в окрасе.</p>
+            </div>
           </li>
           <li class="theory__item">
-            <h3 class="theory__item-title">Кошкин дом</h3>
-            <p class="theory__source">Источник: kotmurr.spb.ru</p>
-            <p class="theory__text">Нужен ли кошке Кошкин дом? Свой отельный, обособленный от пространства городской
-              квартиры Кошкин дом? Да, нужн! Нужен особый Кошкин дом, обустроенный по её вкусу с лесенкой, с
-              когтеточкой,
-              с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
-            <p class="theory__image">
-              <img src="img/cat-house.png" alt="Кошкин дом" width="100" height="100">
-            </p>
+            <div class="theory__item-head">
+              <h3 class="theory__item-title">Кошкин дом</h3>
+              <p class="theory__source">Источник: kotmurr.spb.ru</p>
+            </div>
+            <div class="theory__item-content">
+              <p class="theory__image">
+                <img src="img/cat-house.png" alt="Кошкин дом" width="100" height="100">
+              </p>
+              <p class="theory__text">Нужен ли кошке Кошкин дом? Свой отельный, обособленный от пространства городской
+                квартиры Кошкин дом? Да, нужн! Нужен особый Кошкин дом, обустроенный по её вкусу с лесенкой, с
+                когтеточкой,
+                с замкнутым, своим, отдельным уголком в ее, кошкином, доме.</p>
+            </div>
+
+
           </li>
         </ul>
       </div>
@@ -246,7 +256,7 @@
       </div>
       <section class="page-footer__section page-footer__nav footer-nav">
         <h2 class="visually-hidden">Другие разделы сайта</h2>
-        <section class="footer-nav__shop">
+        <section class="footer-nav__wrapper">
           <h3 class="footer-nav__title">Магазин</h3>
           <ul class="footer-nav__list">
             <li class="footer-nav__item">
@@ -260,7 +270,7 @@
             </li>
           </ul>
         </section>
-        <section class="footer-nav__reviews">
+        <section class="footer-nav__wrapper">
           <h3 class="footer-nav__title">Отзывы</h3>
           <ul class="footer-nav__list">
             <li class="footer-nav__item">
@@ -271,7 +281,7 @@
             </li>
           </ul>
         </section>
-        <section class="footer-nav__price">
+        <section class="footer-nav__wrapper">
           <h3 class="footer-nav__title">Прайс-лист</h3>
           <ul class="footer-nav__list">
             <li class="footer-nav__item">
