Добавляет общие стили для кнопок

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,7 +30,7 @@
             <a href="#" class="site-nav__link">Отзывы</a>
           </li>
         </ul>
-        <a href="#" class="page-nav__order-button button">Заказать</a>
+        <a href="#" class="page-nav__order-button button button--ghost">Заказать</a>
       </nav>
     </div>
     <section class="page-header__hero">
@@ -64,7 +64,7 @@
       <div class="theory__wrapper">
         <div class="theory__header">
           <h2 class="theory__title section-title">Немного теории</h2>
-          <a href="#" class="theory__guide-button button">Справочник</a>
+          <a href="#" class="theory__guide-button button button--brown-ghost">Справочник</a>
         </div>
         <ul class="theory__list">
           <li class="theory__item">
@@ -105,7 +105,7 @@
       <div class="reviews__wrapper">
         <div class="reviews__header">
           <h2 class="reviews__title section-title">Довольные коты</h2>
-          <a href="#" class="reviews__all-button button">Все отзывы</a>
+          <a href="#" class="reviews__all-button button button--brown-ghost">Все отзывы</a>
         </div>
         <ul class="reviews__list">
           <li class="reviews__item">
@@ -129,7 +129,7 @@
       <div class="popular-products__wrapper">
         <div class="popular-products__header">
           <h2 class="popular-products__title section-title">Популярные товары</h2>
-          <a href="#" class="popular-products__catalog-link button">Каталог</a>
+          <a href="#" class="popular-products__catalog-link button button--brown-ghost">Каталог</a>
         </div>
         <ul class="popular-products__list">
           <li class="popular-products__item product">
@@ -241,7 +241,7 @@
             <textarea name="write-us-form-message" id="write-us-form-message" cols="30" rows="10"
               placeholder="Введите текст вашего обращения"></textarea>
           </p>
-          <button class="write-us-form__submit button" type="submit">Отправить</button>
+          <button class="write-us-form__submit button button--brown" type="submit">Отправить</button>
         </form>
       </div>
     </section>
@@ -252,7 +252,7 @@
         <a class="page-footer__logo logo">
           <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
         </a>
-        <a href="#" class="page-footer__order-button button">Заказать</a>
+        <a href="#" class="page-footer__order-button button button--ghost">Заказать</a>
       </div>
       <section class="page-footer__section page-footer__nav footer-nav">
         <h2 class="visually-hidden">Другие разделы сайта</h2>
