Добавляет стили для полей ввода текста

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -221,22 +221,22 @@
           <img src="img/write-us.png" alt="Пишите письма" width="340" height="535">
         </p>
         <form class="write-us__form write-us-form" action="#" method="post">
-          <p class="write-us-form__name">
+          <p class="write-us-form__name custom-text-box">
             <label for="write-us-form-name">Представьтесь, пожалуйста:</label>
             <input type="text" name="write-us-form-name" id="write-us-form-name" placeholder="Имя Прозвище Фамилия">
           </p>
-          <div class="write-us-form__group">
+          <div class="write-us-form__group custom-text-box">
             <p class="write-us-form__phone">
               <label for="write-us-form-phone">Контактный телефон:</label>
               <input type="tel" name="write-us-form-phone" id="write-us-form-phone" placeholder="8 (XXX) XXX-XX-XX">
             </p>
-            <p class="write-us-form__email">
+            <p class="write-us-form__email custom-text-box">
               <label for="write-us-form-email">Электронная почта:</label>
               <input type="email" name="write-us-form-email" id="write-us-form-email" placeholder="E-mail">
             </p>
           </div>
 
-          <p class="write-us-form__message">
+          <p class="write-us-form__message custom-text-box">
             <label for="write-us-form-message">Текст обращения</label>
             <textarea name="write-us-form-message" id="write-us-form-message" cols="30" rows="10"
               placeholder="Введите текст вашего обращения"></textarea>
