--- a/src/html/index.html
+++ b/src/html/index.html
@@ -235,6 +235,19 @@
               <input type="email" name="write-us-form-email" id="write-us-form-email" placeholder="E-mail">
             </p>
           </div>
+          <p class="custom-checkbox">
+            <input class="visually-hidden" type="checkbox" name="write-us-form-subscription"
+              id="write-us-form-subscription" checked>
+            <label class="custom-checkbox__label" for="write-us-form-subscription">
+              <span class="custom-checkbox__toggler">
+                <svg class="custom-checkbox__toggler-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.6 11.9"
+                  stroke="#a38b70">
+                  <g data-name="Layer 1" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2">
+                    <path d="M1 6.1l4.8 4.8M5.8 10.9L15.6 1" />
+                  </g>
+                </svg>
+              </span>Я согласен получать спам и смс на телефон</label>
+          </p>
 
           <p class="write-us-form__message custom-text-box">
             <label for="write-us-form-message">Текст обращения</label>
