Добовляет полные стили для раздела "Немного теории"

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -70,7 +70,7 @@
           <li class="theory__item">
             <div class="theory__item-head">
               <h3 class="theory__item-title">Окрас кошек и котов</h3>
-              <p class="theory__source">источник <a href="#" class="external-link">wikipedia</a></p>
+              <p class="theory__source">источник: <a href="#" class="external-link">wikipedia</a></p>
             </div>
             <div class="theory__item-content">
               <p class="theory__image">
@@ -84,7 +84,7 @@
           <li class="theory__item">
             <div class="theory__item-head">
               <h3 class="theory__item-title">Кошкин дом</h3>
-              <p class="theory__source">Источник: <a href="#" class="external-link">kotmurr.spb.ru</a></p>
+              <p class="theory__source">источник: <a href="#" class="external-link">kotmurr.spb.ru</a></p>
             </div>
             <div class="theory__item-content">
               <p class="theory__image">
