Добавляет дикоративные стили для раздела отзывов

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -109,17 +109,19 @@
         </div>
         <ul class="reviews__list">
           <li class="reviews__item">
-            <blockquote>
-              <p>Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи жизни: для чтения и для
+            <blockquote class="review-item">
+              <p class="review-item__text">Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи
+                жизни: для чтения и для
                 вечеринки с котонами В-)</p>
-              <cite>Барсик, г.Москва</cite>
+              <cite class="review-item__author">Барсик, г.Москва</cite>
             </blockquote>
           </li>
           <li class="reviews__item">
-            <blockquote>
-              <p>Я просто не могу без шоппинга и теперь не нужно тащить хозяйка в магазин, заказываю все аксессуары на
+            <blockquote class="review-item">
+              <p class="review-item__text">Я просто не могу без шоппинга и теперь не нужно тащить хозяйка в магазин,
+                заказываю все аксессуары на
                 сайте Кекса он-лайн!</p>
-              <cite>Мурка, г.Санкт-Петербург</cite>
+              <cite class="review-item__author">Мурка, г.Санкт-Петербург</cite>
             </blockquote>
           </li>
         </ul>
