Добавляет стили для популярных продуктов

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -136,40 +136,46 @@
         <ul class="popular-products__list">
           <li class="popular-products__item product">
             <p class="product__image">
-              <img src="img/product-1.jpg" alt="Очки Классика Жанра" width="306" height="206">
+              <img src="img/product-1.jpg" alt="Очки «Классика жанра»" width="306" height="206">
             </p>
             <div class="product__wrapper">
-              <h3 class="product__title">Очки "Классика жанра"</h3>
-              <p class="product__price">300 р</p>
+              <div class="product__info">
+                <h3 class="product__title">Очки «Классика жанра»</h3>
+                <p class="product__price">300 р</p>
+              </div>
               <div class="product__buttons">
-                <a href="#" class="product__button button">Описание</a>
-                <a href="#" class="product__button button">Купить</a>
+                <a href="#" class="product__button button button--brown">Описание</a>
+                <a href="#" class="product__button button button--brown">Купить</a>
               </div>
             </div>
           </li>
           <li class="popular-products__item product">
             <p class="product__image">
-              <img src="img/product-2.jpg" alt="Очки Жалюзи" width="306" height="206">
+              <img src="img/product-2.jpg" alt="Очки «Жалюзи»" width="306" height="206">
             </p>
             <div class="product__wrapper">
-              <h3 class="product__title">Очки "Жалюзи"</h3>
-              <p class="product__price">400 р.</p>
+              <div class="product__info">
+                <h3 class="product__title">Очки «Жалюзи»</h3>
+                <p class="product__price">400 р.</p>
+              </div>
               <div class="product__buttons">
-                <a href="#" class="product__button button">Описание</a>
-                <a href="#" class="product__button button">Купить</a>
+                <a href="#" class="product__button button button--brown">Описание</a>
+                <a href="#" class="product__button button button--brown">Купить</a>
               </div>
             </div>
           </li>
           <li class="popular-products__item product">
             <p class="product__image">
-              <img src="img/product-3.jpg" alt="Очки Базилио" width="306" height="206">
+              <img src="img/product-3.jpg" alt="Очки «Базилио»" width="306" height="206">
             </p>
             <div class="product__wrapper">
-              <h3 class="product__title">Очки "Базилио"</h3>
-              <p class="product__price">500 р.</p>
+              <div class="product__info">
+                <h3 class="product__title">Очки «Базилио»</h3>
+                <p class="product__price">500 р.</p>
+              </div>
               <div class="product__buttons">
-                <a href="#" class="product__button button">Описание</a>
-                <a href="#" class="product__button button">Купить</a>
+                <a href="#" class="product__button button button--brown">Описание</a>
+                <a href="#" class="product__button button button--brown">Купить</a>
               </div>
             </div>
           </li>
