--- a/src/html/index.html
+++ b/src/html/index.html
@@ -229,33 +229,37 @@
           <img src="img/write-us.png" alt="Пишите письма" width="340" height="535">
         </p>
         <form class="write-us__form write-us-form" action="#" method="post">
-          <p class="write-us-form__name custom-text-box">
-            <label for="write-us-form-name">Представьтесь, пожалуйста:</label>
-            <input type="text" name="write-us-form-name" id="write-us-form-name" placeholder="Имя Прозвище Фамилия">
-          </p>
-          <div class="write-us-form__group custom-text-box">
-            <p class="write-us-form__phone">
-              <label for="write-us-form-phone">Контактный телефон:</label>
-              <input type="tel" name="write-us-form-phone" id="write-us-form-phone" placeholder="8 (XXX) XXX-XX-XX">
+          <fieldset class="write-us-form__user-info">
+            <legend class="visually-hidden">Информация о пользователе</legend>
+            <p class="write-us-form__name custom-text-box">
+              <label for="write-us-form-name">Представьтесь, пожалуйста:</label>
+              <input type="text" name="write-us-form-name" id="write-us-form-name" placeholder="Имя Прозвище Фамилия">
             </p>
-            <p class="write-us-form__email custom-text-box">
-              <label for="write-us-form-email">Электронная почта:</label>
-              <input type="email" name="write-us-form-email" id="write-us-form-email" placeholder="E-mail">
+            <div class="write-us-form__group custom-text-box">
+              <p class="write-us-form__phone">
+                <label for="write-us-form-phone">Контактный телефон:</label>
+                <input type="tel" name="write-us-form-phone" id="write-us-form-phone" placeholder="8 (XXX) XXX-XX-XX">
+              </p>
+              <p class="write-us-form__email custom-text-box">
+                <label for="write-us-form-email">Электронная почта:</label>
+                <input type="email" name="write-us-form-email" id="write-us-form-email" placeholder="E-mail">
+              </p>
+            </div>
+            <p class="write-us-form__sub-toggler custom-checkbox">
+              <input class="visually-hidden" type="checkbox" name="write-us-form-subscription"
+                id="write-us-form-subscription" checked>
+              <label class="custom-checkbox__label" for="write-us-form-subscription">
+                <span class="custom-checkbox__toggler">
+                  <svg class="custom-checkbox__toggler-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.6 11.9"
+                    stroke="#a38b70">
+                    <g data-name="Layer 1" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2">
+                      <path d="M1 6.1l4.8 4.8M5.8 10.9L15.6 1" />
+                    </g>
+                  </svg>
+                </span>Я согласен получать спам и смс на телефон</label>
             </p>
-          </div>
-          <p class="custom-checkbox">
-            <input class="visually-hidden" type="checkbox" name="write-us-form-subscription"
-              id="write-us-form-subscription" checked>
-            <label class="custom-checkbox__label" for="write-us-form-subscription">
-              <span class="custom-checkbox__toggler">
-                <svg class="custom-checkbox__toggler-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.6 11.9"
-                  stroke="#a38b70">
-                  <g data-name="Layer 1" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2">
-                    <path d="M1 6.1l4.8 4.8M5.8 10.9L15.6 1" />
-                  </g>
-                </svg>
-              </span>Я согласен получать спам и смс на телефон</label>
-          </p>
+
+          </fieldset>
 
           <p class="write-us-form__message custom-text-box">
             <label for="write-us-form-message">Текст обращения</label>
