Рефакторинг. Подогнал отсупы под соответствие макету

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,7 +51,8 @@
           </li>
           <li class="features__item features__item--quality">
             <h3 class="features__title">Качество</h3>
-            <p class="features__desc">Наши товары не сломаются на второй день. Только третий.</p>
+            <p class="features__desc">Наши товары не сломаются на
+              второй день. Только на третий.</p>
           </li>
           <li class="features__item features__item--safety">
             <h3 class="features__title">Безопасность</h3>
@@ -76,9 +77,10 @@
               <p class="theory__image">
                 <img src="img/cat-color.png" alt="Окрас кошек и котов" width="100" height="100">
               </p>
-              <p class="theory__text">Окрас шерсти, коже и глаз кошки обусловлен присутствием в них пигмента меланина.
-                Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и
-                количеству, что и вызывает различия в окрасе.</p>
+              <p class="theory__text">Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина.
+                Меланин находится в теле волоса в виде
+                микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в
+                окрасе.</p>
             </div>
           </li>
           <li class="theory__item">
@@ -111,17 +113,17 @@
           <li class="reviews__item">
             <blockquote class="review-item">
               <p class="review-item__text">Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи
-                жизни: для чтения и для
-                вечеринки с котонами В-)</p>
-              <cite class="review-item__author">Барсик, г.Москва</cite>
+                жизни:
+                для чтения и для вечеринки с котанами B-)</p>
+              <cite class="review-item__author">Барсик, г. Москва</cite>
             </blockquote>
           </li>
           <li class="reviews__item">
             <blockquote class="review-item">
-              <p class="review-item__text">Я просто не могу без шоппинга и теперь не нужно тащить хозяйка в магазин,
-                заказываю все аксессуары на
-                сайте Кекса он-лайн!</p>
-              <cite class="review-item__author">Мурка, г.Санкт-Петербург</cite>
+              <p class="review-item__text">Я просто не могу без шоппинга и теперь не нужно тащить хозяйку в магазин,
+                заказываю все аксессуары на сайте у Кекса
+                он-лайн!</p>
+              <cite class="review-item__author">Мурка, г. Санкт-Петербург</cite>
             </blockquote>
           </li>
         </ul>
@@ -223,7 +225,7 @@
       <div class="write-us__wrapper">
         <div class="write-us__header">
           <h2 class="write-us__title section-title">Остались вопросы?</h2>
-          <p>Свяжитесь с нами и мы развеем оставшиеся у вас сомнения!</p>
+          <p class="write-us__text">Свяжитесь с нами, и мы развеем оставшиеся у вас сомнения!</p>
         </div>
         <p class="write-us__image">
           <img src="img/write-us.png" alt="Пишите письма" width="340" height="535">
@@ -233,12 +235,12 @@
             <legend class="visually-hidden">Информация о пользователе</legend>
             <p class="write-us-form__name custom-text-box">
               <label for="write-us-form-name">Представьтесь, пожалуйста:</label>
-              <input type="text" name="write-us-form-name" id="write-us-form-name" placeholder="Имя Прозвище Фамилия">
+              <input type="text" name="write-us-form-name" id="write-us-form-name" placeholder="Имя «Прозвище» Фамилия">
             </p>
             <div class="write-us-form__group custom-text-box">
               <p class="write-us-form__phone">
                 <label for="write-us-form-phone">Контактный телефон:</label>
-                <input type="tel" name="write-us-form-phone" id="write-us-form-phone" placeholder="8 (XXX) XXX-XX-XX">
+                <input type="tel" name="write-us-form-phone" id="write-us-form-phone" placeholder="8 (ХХХ) ХХХ-ХХ-ХХ">
               </p>
               <p class="write-us-form__email custom-text-box">
                 <label for="write-us-form-email">Электронная почта:</label>
