Добавляет ссылку в copyright

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -339,7 +339,7 @@
           </ul>
         </div>
         <p class="page-footer__copyright copyright">
-          С <span class="copyright__heart-icon"></span> для Html Academy
+          С <span class="copyright__heart-icon">любовью</span> для <a href="#">Html Academy</a>
         </p>
       </div>
     </div>
