Рефакторинг. Подогнал отстыпу под макет
Справил отступы в футоре и в блоке формы

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -253,7 +253,7 @@
               <label class="custom-checkbox__label" for="write-us-form-subscription">
                 <span class="custom-checkbox__toggler">
                   <svg class="custom-checkbox__toggler-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.6 11.9"
-                    stroke="#a38b70">
+                    width="17" height="17" stroke="#a38b70">
                     <g data-name="Layer 1" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2">
                       <path d="M1 6.1l4.8 4.8M5.8 10.9L15.6 1" />
                     </g>
@@ -281,7 +281,7 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <div class="page-footer__section">
+      <div class="page-footer__section page-footer__section--top">
         <a class="page-footer__logo logo">
           <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
         </a>
