Исправляет copyright ссылку на HTML Academy

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -340,7 +340,8 @@
           </ul>
         </div>
         <p class="page-footer__copyright copyright">
-          С <span class="copyright__heart-icon">любовью</span> для <a class="copyright__link" href="#">Html Academy</a>
+          С <span class="copyright__heart-icon">любовью</span> для <a class="copyright__link"
+            href="https://htmlacademy.ru/intensive" target="_blank">Html Academy</a>
         </p>
       </div>
     </div>
