Исправляет Title страницы и alt к логотипам сайта

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.min.css">
-  <title>Document</title>
+  <title>The Great Keksby - Товары и услуги для котиков</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div class="page-header__wrapper">
       <nav class="page-header__nav page-nav">
         <a class="page-nav__logo logo">
-          <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
+          <img src="img/logo.png" alt="логотип The Great Keksby" width="205" height="55">
         </a>
         <ul class="page-nav__site-nav site-nav">
           <li class="site-nav__item">
@@ -278,7 +278,7 @@
     <div class="page-footer__wrapper">
       <div class="page-footer__section page-footer__section--top">
         <a class="page-footer__logo logo">
-          <img src="img/logo.png" alt="логотип Keksby" width="205" height="55">
+          <img src="img/logo.png" alt="логотип The Great Keksby" width="205" height="55">
         </a>
         <a href="#" class="page-footer__order-button button button--ghost">Заказать</a>
       </div>
